spacing fixes [deploy: production]

--- a/_sass/_donate.scss
+++ b/_sass/_donate.scss
@@ -20,4 +20,11 @@
         	font-weight: normal;
         }
     }
+    .wells {
+        a {
+            @include media($desktop) {
+                @include span-columns(4);
+            }
+        }
+    }
 }
