--- a/_sass/_events.scss
+++ b/_sass/_events.scss
@@ -28,7 +28,7 @@
     .image {
       width: 100%;
       height: auto;
-
+      max-height: 143px;
       img {
         margin: auto;
 
