--- a/_sass/_ventures.scss
+++ b/_sass/_ventures.scss
@@ -30,3 +30,11 @@
         color: $gray;
     }
 }
+
+.page-partners {
+    .venture-item {
+        &:hover {
+            @extend .shadow;
+        }
+    }
+}
